Firefox Linux fixes: Resolve input visibility and dark theme issues
- Add Firefox-specific CSS fixes for GTK theme interference on Pop OS
- Override autofill dark backgrounds with \!important rules
- Add extra bottom padding and spacer element to prevent input cut-off
- Use @-moz-document selectors for Firefox-specific styling
- Fix min-width: 0 for flex container inputs in Firefox
- Add bottom-spacer element to raise input area visibility
- Override Firefox's overflow: clip with overflow: visible

--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,9 @@
                     </button>
                 </div>
             </div>
+            
+            <!-- Bottom spacer for Firefox input visibility -->
+            <div class="bottom-spacer" aria-hidden="true"></div>
         </main>
 
         <!-- Review Options Screen (Initially Hidden) -->
