--- a/public/index.html
+++ b/public/index.html
@@ -140,13 +140,14 @@
                     </svg>
                 </button>
                 
-                <div class="input-wrapper">
+                <div class="input-wrapper" style="background: #FFFFFF !important; background-color: #FFFFFF !important;">
                     <textarea 
                         id="message-input" 
                         class="message-input" 
                         placeholder="Tell us about your experience..."
                         rows="1"
                         aria-label="Type your response"
+                        style="background: transparent !important; color: #000000 !important; font-size: 16px !important;"
                     ></textarea>
                     <button id="send-button" class="send-button" aria-label="Send message" type="button">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
